# honeypot

./: Cargo.toml  README.md  justfile
migrations/: 20231214052318_first.sql
src/: db.rs  main.rs
