[package]
name = "honeypot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
azalea = { git = "https://github.com/azalea-rs/azalea" }
azalea-chat = { git = "https://github.com/azalea-rs/azalea" }
tokio = { version = "1.35.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate" ] }
futures = "0.3.29"
uuid = "1.6.1"
chrono = "0.4.31"
